# robot_test

./: .gitignore  README.md  pyproject.toml  requirements.txt
.circleci/: config.yml
tests/: ebay.search.tests.robot  test.robot
tests/page-objects/: ebay-landing-page.robot  laptop-search-page.robot  smart-phones-page.robot
tests/test-utils/: test-base.robot
